update routes
